nav z-index and height fix for narrow viewports

--- a/src/UI/templates/default/Layout/layout.less
+++ b/src/UI/templates/default/Layout/layout.less
@@ -116,6 +116,11 @@ header {
 }
 
 /* Sidebar */
+
+nav {
+	z-index: 1;
+}
+
 .il-layout-page-sidebar {
 	background: #fff;
 	display: flex;
@@ -130,7 +135,6 @@ header {
 	.il-sidebar-triggers {
 		.shadow-right;
 		background: @bg-sidebar;
-		height: 100%;
 		position: relative; 
 		width: @trigger-width;
 		z-index: 1;
